refactor AbstractHttpClient to use new HttpClient and remove redundant reflection calls. Refactoring related to powermock deprecation(GONRG-7315)