@@ -20,13 +20,13 @@
 
   <groupId>org.opengroup.osdu</groupId>
   <artifactId>os-core-common</artifactId>
-  <version>0.22.0-SNAPSHOT</version>
+  <version>0.22.0-SNAPSHOT-J17</version>
   <packaging>jar</packaging>
 
 
   <properties>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.main.basedir>${project.basedir}</project.main.basedir>
     <spring-boot.version>2.7.7</spring-boot.version>
@@ -38,7 +38,7 @@
     <json-smart.version>2.4.8</json-smart.version>
     <gson.version>2.10.1</gson.version>
     <log4j2.version>2.17.1</log4j2.version>
-    <lombok.version>1.18.24</lombok.version>
+    <lombok.version>1.18.26</lombok.version>
     <javax-inject.version>1</javax-inject.version>
     <javax-validation-api.version>2.0.1.Final</javax-validation-api.version>
     <javax-servlet-api.version>4.0.1</javax-servlet-api.version>
@@ -63,6 +63,7 @@
     <spring-security-web.version>5.7.6</spring-security-web.version>
     <json.version>20220924</json.version>
     <jna-platform.version>5.13.0</jna-platform.version>
+    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
   </properties>
 
   <licenses>
@@ -291,26 +292,20 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>${mockito-all.version}</version>
+      <artifactId>mockito-inline</artifactId>
+      <version>5.2.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito</artifactId>
-      <version>${powermock-api-mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <version>${powermock-module-junit4.version}</version>
+      <artifactId>powermock-api-mockito2</artifactId>
+      <version>2.0.9</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.powermock</groupId>
       <artifactId>powermock-core</artifactId>
-      <version>${powermock-core.version}</version>
+      <version>2.0.9</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -355,7 +350,6 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
-          <useSystemClassLoader>false</useSystemClassLoader>
           <threadCount>1</threadCount>
         </configuration>
       </plugin>
